refactor(package.json): update package name and description for clarity The package name is changed from "karabiner-config" to "karabiner-elements-config" and the description is updated to "My Karabiner Elements config". This clarifies that the configuration is specifically for Karabiner Elements.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "karabiner-config",
-  "description": "karabiner config in karabiner.ts",
+  "name": "karabiner-elements-config",
+  "description": "My Karabiner Elements config",
   "scripts": {
     "build": "tsx src/index.ts",
     "update": "npm update karabiner.ts"
