refactor(deps): update package.json to use `bun update` and pin `karabiner.ts` version
Switch `npm update` to `bun update` in the `update` script because the project is moving towards using Bun as the package manager/runtime. Pin the dependency version for `karabiner.ts` from `latest` to a specific version (`^1.35.1`) to ensure reproducible builds and avoid unexpected breaking changes from future updates.

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "description": "My Karabiner Elements config",
   "scripts": {
     "build": "tsx src/index.ts",
-    "update": "npm update karabiner.ts"
+    "update": "bun update karabiner.ts"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "karabiner.ts": "latest",
+    "karabiner.ts": "^1.35.1",
     "tsx": "^4",
     "typescript": "^5"
   }
